# mochidetect

./: Cargo.toml  README.md  content.md
.github/workflows/: ci.yaml  release.yml
src/: diff.rs  main.rs  tui.rs
testing/v1/: trash.txt  v1.1.txt
testing/v2/: inappropiate.txt
