[package]
name = "mochidetect"
version = "0.1.0"
edition = "2024"
description = "Smart diff tool for comparing versions/projects (good for ai assisted development ;))"
authors = ["gh-mochi-org", "idotconfig"]
license = "MIT"

[[bin]]
name = "mochidetect"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "color"] }
crossterm = "0.29.0"
hex = "0.4.3"
ratatui = "0.30.0"
sha2 = "0.10.9"
similar = "2.7.0"
walkdir = "2.5.0"
