[package]
name = "mochidetect"
version = "0.1.1"
edition = "2024"
description = "Smart diff tool for comparing versions/projects (good for ai assisted development ;))"
authors = ["gh-mochi-org", "idotconfig"]
license = "MIT"

[[bin]]
name = "mochidetect"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "color"] }
crossterm = "0.29.0"
globset = "0.4.18"
hex = "0.4.3"
ignore = "0.4.25"
ratatui = "0.30.0"
rayon = "1.11.0"
sha2 = "0.10.9"
similar = "2.7.0"
walkdir = "2.5.0"
